# echolysis

./: .gitignore  .pre-commit-config.yaml  .vscode-test.mjs  .vscodeignore  Cargo.toml  LICENSE  README.md  esbuild.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  test1.rs  tsconfig.json
.github/workflows/: build-and-test.yml  release.yml
crates/echolysis-cli/: Cargo.toml
crates/echolysis-cli/src/: main.rs
crates/echolysis-core/: Cargo.toml
crates/echolysis-core/src/: indexed_tree.rs  lib.rs  main.rs
crates/echolysis-core/src/engine/: detect.rs  indexed_node.rs  indexed_tree.rs  insert.rs  merkle_hash.rs  mod.rs  remove.rs
crates/echolysis-core/src/indexed_engine/: indexed_node.rs  indexed_tree.rs  insert.rs  merkle_hash.rs  mod.rs  remove.rs
crates/echolysis-core/src/languages/: mod.rs  python.rs  rust.rs
crates/echolysis-core/src/utils/: hash.rs  language_id.rs  mod.rs  tree.rs
crates/echolysis-lsp/: Cargo.toml
crates/echolysis-lsp/src/: main.rs
crates/echolysis-lsp/src/server/: diagnostic.rs  fs_watcher.rs  language_server.rs  log.rs  mod.rs  router.rs  utils.rs
crates/echolysis-lsp/src/server/handle_event/: mod.rs
crates/echolysis-lsp/src/server/on_event/: on_insert.rs  on_remove.rs
demo/py/: main.py  python.py  requirements.txt  rust.py
src/: extension.ts
