[workspace]
members = [
    "crates/echolysis-cli",
    "crates/echolysis-core",
    "crates/echolysis-lsp"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["yingmanwumen"]
description = "Duplicated code checker based on tree-sitter"
repository = "https://github.com/yingmanwumen/echolysis"
license = "MIT"
readme = "README.md"
keywords = []
categories = []

[workspace.dependencies]
rustc-hash = "2.1.0"
ahash = "0.8"
rayon = "1.10.0"
dashmap = { version = "6", features = ["rayon"] }
streaming-iterator = "0.1"
phf = { version = "0.11", features = ["macros"] }
rpmalloc = "0.2"
