[workspace]
members = [
    "crates/echolysis-cli",
    "crates/echolysis-core",
    "crates/echolysis-lsp"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["yingmanwumen"]
description = "Duplicated code checker based on tree-sitter"
repository = "https://github.com/yingmanwumen/echolysis"
license = "MIT"
readme = "README.md"
keywords = []
categories = []

[workspace.dependencies]
ahash = "0.8"
dashmap = { version = "6", features = ["rayon"] }
futures = "0.3"
git2 = "0.20.0"
parking_lot = "0.12"
phf = { version = "0.11", features = ["macros"] }
rayon = "1.10.0"
rpmalloc = "0.2"
rustc-hash = "2.1.0"
streaming-iterator = "0.1"
tree-sitter = "0.25"
