[package]
name = "echolysis-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash.workspace = true
dashmap.workspace = true
phf.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
streaming-iterator.workspace = true
tree-sitter.workspace = true

tree-sitter-python = "0.23.6"
tree-sitter-rust = "0.23"

[build-dependencies]
cc = "*"
