[package]
name = "echolysis-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
rustc-hash.workspace = true
tokio = { version = "1.43.0", features = ["full"] }
tower-lsp = "0.20"
notify = "8.0.0"
parking_lot = "0.12"
rayon.workspace = true
rpmalloc.workspace = true
git2 = "0.20.0"
dashmap = "6.1"
ahash.workspace = true

echolysis-core = { path = "../echolysis-core" }
